feat(env): add docker support
- Adicionado dockerfile e docker-compose para conteinizar a aplicação e
  o banco de dados.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=dmoTask
+spring.datasource.url=jdbc:postgresql://db:5432/dmodb
+spring.datasource.username=dmouser
+spring.datasource.password=dmopass
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
